LPS-45470  on smartphones, portlet configuration alert message text has overflow issues

--- a/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/custom_common.css
@@ -32,7 +32,12 @@
 	}
 
 	.alert {
+		display: block;
 		word-wrap: break-word;
+
+		@include respond-to(desktop) {
+			display: inline;
+		}
 	}
 
 	.table {
